2013-07-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Removed diffs between src/ and xsrc/ version of the remaining
	files and moved them to the top-level: cidtype0.c, dvi.c,
	dvipdfmx.c, epdf.c, jpegimage.c, pdfcolor.c, pdfdev.c, pdfdoc.c,
	pdfdraw.c, pdfobj.c, pdfximage.c, spc_pdfm.c, spc_tpic.c,
	tt_cmap.c, type1c.c, xbb.c.
	* Makefile.am: Adapted.

	* jpegimage.c (jpeg_get_density): Bugfix (from xdvipdfmx r108).

2013-07-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tt_aux.c, tt_post.c: Try to avoid a segfault for some broken
	TrueType fonts with 'post' table Version 0x00000000UL or other.

	* unicode.[ch]: Drop '#include "agl.h"' and others.
	* pdffont.c: Add '#include "agl.h"'.

	* Removed diffs between src/ and xsrc/ version of these files
	and moved them to the top-level: cff_dict.c, pdfencrypt.c,
	pdfnames.h, spc_dvips.c, specials.c, tfm.c, truetype.c, type1.c.

	* Makefile.am (libutil.a): Build a library from files that do
	not depend on '-DXETEX': cs_type2.c, dpxconf.c, dpxcrypt.c,
	error.c, mem.c, mfileio.c, numbers.c, otl_opt.c, pdfencoding.c,
	pdfencrypt.c, subfont.c, unicode.c.

	* Reduced dvipdfmx/xdvipdfmx diffs in these files:
	dvipdfmx.c, jpegimage.c, pdfdoc.c, pdfdraw.c, pdfnames.c,
	pdfobj.c, pdfximage.c, spc_pdfm.c, spc_tpic.c, tt_cmap.c, xbb.c.

2013-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xsrc/jpegimage.c: Added jpeg_get_bbox() and jpeg_get_density()
	from src/jpegimage.c.
	* xsrc/pdfdoc.c: Added pdf_doc_get_page() from src/pdfdoc.c.
	* xsrc/pngimage.c: Added png_get_bbox() from src/pngimage.c.
	* xbb.h (removed): Merged ...
	* dvipdfmx.h: ... into here.

	* Removed diffs between src/ and xsrc/ version of these files
	and moved them to the top-level: pdfobj.h, pngimage.c.

	* Reduced dvipdfmx/xdvipdfmx diffs in these files:
	dvipdfmx.c, epdf.c, pdfdoc.c, pdfobj.c, pdfximage.c, xbb.c.

	* src/dvipdfmx.c, xsrc/dvipdfmx.c: Add '--xbb', '--ebb' options.

	* (x)dvipdfmx.test: Correctly set the environment variables.